--- a/pandas/Essential Basic Functionality.ipynb
+++ b/pandas/Essential Basic Functionality.ipynb
@@ -58,15 +58,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0   -0.972873\n",
-      "1   -1.625180\n",
-      "2   -0.270693\n",
-      "3    0.141191\n",
-      "4    0.261722\n",
+      "0    1.600384\n",
+      "1   -0.407873\n",
+      "2    0.359483\n",
+      "3    0.532786\n",
+      "4    1.210273\n",
       "dtype: float64\n",
-      "997   -0.772221\n",
-      "998    1.955846\n",
-      "999   -0.982712\n",
+      "997   -0.544460\n",
+      "998    1.228556\n",
+      "999    1.610510\n",
       "dtype: float64\n"
      ]
     }
@@ -106,18 +106,18 @@
      "output_type": "stream",
      "text": [
       "                   A         B         C\n",
-      "2000-01-01  1.280789  1.748411 -0.152509\n",
-      "2000-01-02 -0.235524  1.470467  1.045986\n",
+      "2000-01-01  0.145118  0.630566  0.337466\n",
+      "2000-01-02 -0.006667 -1.635134 -0.154327\n",
       "['A', 'B', 'C']\n",
       "                   a         b         c\n",
-      "2000-01-01  1.280789  1.748411 -0.152509\n",
-      "2000-01-02 -0.235524  1.470467  1.045986\n",
-      "2000-01-03  0.593322 -0.622625 -0.879623\n",
-      "2000-01-04  0.379363 -1.412958  0.650302\n",
-      "2000-01-05  0.554830  1.091477 -0.106444\n",
-      "2000-01-06 -1.109539 -0.736802  1.047411\n",
-      "2000-01-07 -0.747737 -1.734697  0.519764\n",
-      "2000-01-08 -1.838872  1.773919  0.983656\n"
+      "2000-01-01  0.145118  0.630566  0.337466\n",
+      "2000-01-02 -0.006667 -1.635134 -0.154327\n",
+      "2000-01-03 -1.993847  0.591524 -1.615003\n",
+      "2000-01-04 -0.701164  0.183968  1.112280\n",
+      "2000-01-05 -0.625369  2.013312 -1.447237\n",
+      "2000-01-06  0.624275 -2.083235 -0.161841\n",
+      "2000-01-07 -0.928790  2.062428  3.404676\n",
+      "2000-01-08 -0.142214 -0.921791  0.230453\n"
      ]
     }
    ],
@@ -146,26 +146,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.32072342 -0.65913561  0.82362356  1.71852105 -0.83308781]\n",
-      "[[ 1.28078884  1.74841074 -0.15250945]\n",
-      " [-0.23552368  1.47046691  1.04598602]\n",
-      " [ 0.5933221  -0.62262493 -0.87962302]\n",
-      " [ 0.37936278 -1.41295761  0.65030245]\n",
-      " [ 0.55483025  1.09147715 -0.10644368]\n",
-      " [-1.1095388  -0.73680224  1.04741091]\n",
-      " [-0.7477374  -1.73469672  0.51976411]\n",
-      " [-1.83887165  1.77391887  0.98365632]]\n",
-      "[[[-0.36940706 -2.39910193 -1.87432179  1.28067816]\n",
-      "  [-1.92597436  0.08598417  1.65846546 -0.63415452]\n",
-      "  [-1.40604521 -0.61467081  0.08724799  1.85663859]\n",
-      "  [-0.62727826  0.33385138  0.09331673 -0.48008362]\n",
-      "  [-0.63404146  0.73937405 -0.13263934 -0.17330037]]\n",
+      "[-1.63140465  0.13828657  0.58947383  1.12658133  0.88258443]\n",
+      "[[ 0.14511772  0.63056563  0.33746631]\n",
+      " [-0.00666655 -1.63513443 -0.15432732]\n",
+      " [-1.99384747  0.59152437 -1.61500302]\n",
+      " [-0.70116449  0.18396827  1.1122797 ]\n",
+      " [-0.62536948  2.01331164 -1.44723727]\n",
+      " [ 0.624275   -2.08323481 -0.16184054]\n",
+      " [-0.92878975  2.0624284   3.40467586]\n",
+      " [-0.14221446 -0.92179092  0.23045339]]\n",
+      "[[[  4.53614677e-01   1.19413750e+00   8.83063425e-01   2.01563526e-02]\n",
+      "  [  1.02468534e+00   6.25340607e-01   6.99774812e-01   3.31339568e-01]\n",
+      "  [  7.14750819e-04  -5.09452983e-01   5.29484013e-01   8.46319166e-01]\n",
+      "  [  3.05680585e-01  -4.29092971e-01  -8.93992702e-01   2.27485822e-01]\n",
+      "  [  3.11783753e-01  -4.39327881e-01   5.74645376e-01   2.99857797e-01]]\n",
       "\n",
-      " [[-0.4479705   0.57889191  1.38640209  0.57836847]\n",
-      "  [ 0.14754414  0.10331269 -0.67314599  0.34404298]\n",
-      "  [-0.75826778 -1.35185946  0.59261197  2.15333173]\n",
-      "  [-0.10361517  1.31539243  0.38497224  0.78309511]\n",
-      "  [ 0.30407175 -0.81649013 -1.74633981  0.16627246]]]\n"
+      " [[ -1.27069649e+00  -8.47117176e-01   1.61655553e+00  -2.80847866e-01]\n",
+      "  [ -5.18218421e-01   1.70342023e+00   7.13978108e-01   5.98623046e-01]\n",
+      "  [ -6.04164928e-02  -3.32276393e-01   7.02853576e-01   1.36219867e-01]\n",
+      "  [  1.10780688e+00   9.18750383e-01   1.77985253e+00  -4.12829649e-01]\n",
+      "  [ -1.63698758e+00  -5.17031279e-01  -7.29118597e-01   1.35222058e+00]]]\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -216,39 +216,39 @@
      "output_type": "stream",
      "text": [
       "        one     three       two\n",
-      "a  0.159327       NaN  0.911939\n",
-      "b  0.129871 -0.467140 -1.409027\n",
-      "c -0.210639 -0.531240 -2.085780\n",
-      "d       NaN -0.393023  0.278122\n",
-      "one      0.129871\n",
-      "three   -0.467140\n",
-      "two     -1.409027\n",
+      "a -1.076256       NaN -0.843741\n",
+      "b  0.594169 -0.390963  0.218790\n",
+      "c -0.347490 -0.612919 -0.426137\n",
+      "d       NaN -1.188434 -0.955574\n",
+      "one      0.594169\n",
+      "three   -0.390963\n",
+      "two      0.218790\n",
       "Name: b, dtype: float64\n",
-      "a    0.911939\n",
-      "b   -1.409027\n",
-      "c   -2.085780\n",
-      "d    0.278122\n",
+      "a   -0.843741\n",
+      "b    0.218790\n",
+      "c   -0.426137\n",
+      "d   -0.955574\n",
       "Name: two, dtype: float64\n",
       "        one     three       two\n",
-      "a  0.029456       NaN  2.320966\n",
+      "a -1.670425       NaN -1.062532\n",
       "b  0.000000  0.000000  0.000000\n",
-      "c -0.340510 -0.064099 -0.676753\n",
-      "d       NaN  0.074117  1.687148\n",
+      "c -0.941659 -0.221956 -0.644928\n",
+      "d       NaN -0.797470 -1.174364\n",
       "        one     three       two\n",
-      "a  0.029456       NaN  2.320966\n",
+      "a -1.670425       NaN -1.062532\n",
       "b  0.000000  0.000000  0.000000\n",
-      "c -0.340510 -0.064099 -0.676753\n",
-      "d       NaN  0.074117  1.687148\n",
+      "c -0.941659 -0.221956 -0.644928\n",
+      "d       NaN -0.797470 -1.174364\n",
       "        one     three  two\n",
-      "a -0.752612       NaN  0.0\n",
-      "b  1.538898  0.941886  0.0\n",
-      "c  1.875141  1.554540  0.0\n",
-      "d       NaN -0.671145  0.0\n",
+      "a -0.232515       NaN  0.0\n",
+      "b  0.375378 -0.609754  0.0\n",
+      "c  0.078647 -0.186782  0.0\n",
+      "d       NaN -0.232860  0.0\n",
       "        one     three  two\n",
-      "a -0.752612       NaN  0.0\n",
-      "b  1.538898  0.941886  0.0\n",
-      "c  1.875141  1.554540  0.0\n",
-      "d       NaN -0.671145  0.0\n"
+      "a -0.232515       NaN  0.0\n",
+      "b  0.375378 -0.609754  0.0\n",
+      "c  0.078647 -0.186782  0.0\n",
+      "d       NaN -0.232860  0.0\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -290,15 +290,15 @@
      "output_type": "stream",
      "text": [
       "        one     three  two\n",
-      "a -0.752612       NaN  0.0\n",
-      "b  1.538898  0.941886  0.0\n",
-      "c  1.875141  1.554540  0.0\n",
-      "d       NaN -0.671145  0.0\n",
+      "a -0.232515       NaN  0.0\n",
+      "b  0.375378 -0.609754  0.0\n",
+      "c  0.078647 -0.186782  0.0\n",
+      "d       NaN -0.232860  0.0\n",
       "        one     three       two\n",
-      "a  0.159327       NaN  0.911939\n",
-      "b  0.129871 -0.467140 -1.409027\n",
-      "c -0.210639 -0.531240 -2.085780\n",
-      "d       NaN -0.393023  0.278122\n"
+      "a -1.076256       NaN -0.843741\n",
+      "b  0.594169 -0.390963  0.218790\n",
+      "c -0.347490 -0.612919 -0.426137\n",
+      "d       NaN -1.188434 -0.955574\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -331,25 +331,25 @@
      "output_type": "stream",
      "text": [
       "        one     three       two\n",
-      "a  0.159327       NaN  0.911939\n",
-      "b  0.129871 -0.467140 -1.409027\n",
-      "c -0.210639 -0.531240 -2.085780\n",
-      "d       NaN -0.393023  0.278122\n",
+      "a -1.076256       NaN -0.843741\n",
+      "b  0.594169 -0.390963  0.218790\n",
+      "c -0.347490 -0.612919 -0.426137\n",
+      "d       NaN -1.188434 -0.955574\n",
       "        one      three       two\n",
-      "a  0.159327  12.000000  0.911939\n",
-      "b  0.129871  -0.467140 -1.409027\n",
-      "c -0.210639  -0.531240 -2.085780\n",
-      "d       NaN  -0.393023  0.278122\n",
+      "a -1.076256  12.000000 -0.843741\n",
+      "b  0.594169  -0.390963  0.218790\n",
+      "c -0.347490  -0.612919 -0.426137\n",
+      "d       NaN  -1.188434 -0.955574\n",
       "        one     three       two\n",
-      "a  0.318654       NaN  1.823878\n",
-      "b  0.259742 -0.934281 -2.818053\n",
-      "c -0.421279 -1.062479 -4.171560\n",
-      "d       NaN -0.786046  0.556243\n",
+      "a -2.152513       NaN -1.687483\n",
+      "b  1.188337 -0.781927  0.437581\n",
+      "c -0.694980 -1.225839 -0.852275\n",
+      "d       NaN -2.376868 -1.911147\n",
       "        one      three       two\n",
-      "a  0.318654  12.000000  1.823878\n",
-      "b  0.259742  -0.934281 -2.818053\n",
-      "c -0.421279  -1.062479 -4.171560\n",
-      "d       NaN  -0.786046  0.556243\n"
+      "a -2.152513  12.000000 -1.687483\n",
+      "b  1.188337  -0.781927  0.437581\n",
+      "c -0.694980  -1.225839 -0.852275\n",
+      "d       NaN  -2.376868 -1.911147\n"
      ]
     }
    ],
@@ -363,13 +363,284 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Flexible Comparsions\n",
+    "\n",
+    "pandas introduced binary comparsion methods eq, ne, lt, gt, le and ge to Series and DataFrame whose behavior is analogous to the binary artimetic operations described above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     one  three    two\n",
+      "a  False  False  False\n",
+      "b  False  False  False\n",
+      "c  False  False  False\n",
+      "d  False  False  False\n",
+      "     one  three    two\n",
+      "a  False   True  False\n",
+      "b  False  False  False\n",
+      "c  False  False  False\n",
+      "d   True  False  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df.gt(df2)\n",
+    "print df.ne(df2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean Redcutions\n",
+    "\n",
+    "you can apply the reductions: empty, any, all and boolean to provide a way to summarize a boolean result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     one  three    two\n",
+      "a  False  False  False\n",
+      "b   True  False   True\n",
+      "c  False  False  False\n",
+      "d  False  False  False\n",
+      "one      False\n",
+      "three    False\n",
+      "two      False\n",
+      "dtype: bool\n",
+      "a    False\n",
+      "b    False\n",
+      "c    False\n",
+      "d    False\n",
+      "dtype: bool\n",
+      "one       True\n",
+      "three    False\n",
+      "two       True\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df > 0\n",
+    "print (df > 0).all()\n",
+    "print (df > 0).all(axis='columns')\n",
+    "print (df > 0).any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Descriptive statistic\n",
+    "\n",
+    "A large number of methods for computing descriptive statistics and other related operation on Series, DataFrame, Panel. Most of these are aggregation(hence producing a lower-dimensional result) like sum(), mean(), and quantile(), but more of them, like cumsum(), cumprod(), produce an object of the same size. Generally speaking there methods take an axis argument, just like ndarray {sum, std,...} but the axis can be specified by name or integer\n",
+    "\n",
+    "- Sereis: no axis argument needed\n",
+    "- DataFrame: \"index\"(axis=0, default), \"column\"(axis=1)\n",
+    "- Panel: \"item\"(axis=0),\"major\"(axis=1,default), \"minor\"(axis=2)\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        one     three       two\n",
+      "a -1.076256       NaN -0.843741\n",
+      "b  0.594169 -0.390963  0.218790\n",
+      "c -0.347490 -0.612919 -0.426137\n",
+      "d       NaN -1.188434 -0.955574\n",
+      "one     -0.276526\n",
+      "three   -0.730772\n",
+      "two     -0.501665\n",
+      "dtype: float64\n",
+      "a   -0.959999\n",
+      "b    0.140665\n",
+      "c   -0.462182\n",
+      "d   -1.072004\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df\n",
+    "print df.mean()\n",
+    "print df.mean(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All such methods have a skipna option signaling whether to exclude missing data(True by default)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one           NaN\n",
+      "three         NaN\n",
+      "two     -2.006662\n",
+      "dtype: float64\n",
+      "a   -1.919998\n",
+      "b    0.421996\n",
+      "c   -1.386547\n",
+      "d   -2.144007\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df.sum(0, skipna=False)\n",
+    "print df.sum(1, skipna=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "combined with the broadcasting / aritmetic behavior, one can descibe various statistical procedure, like standardization (rendering data zero mean and standard deviation 1), very concisely"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        one     three       two\n",
+      "a -0.954936       NaN -0.643478\n",
+      "b  1.039672  0.825599  1.355248\n",
+      "c -0.084736  0.286335  0.142076\n",
+      "d       NaN -1.111934 -0.853846\n",
+      "one      1.0\n",
+      "three    1.0\n",
+      "two      1.0\n",
+      "dtype: float64\n",
+      "a    1.0\n",
+      "b    1.0\n",
+      "c    1.0\n",
+      "d    1.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ts_stand = (df - df.mean())/ df.std()\n",
+    "print ts_stand\n",
+    "print ts_stand.std()\n",
+    "\n",
+    "xs_stand = df.sub(df.mean(1), axis=0).div(df.std(1), axis=0)\n",
+    "print xs_stand.std(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that method like cumsum() and cumprod() preserve the location of NA values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        one     three       two\n",
+      "a -1.076256       NaN -0.843741\n",
+      "b  0.594169 -0.390963  0.218790\n",
+      "c -0.347490 -0.612919 -0.426137\n",
+      "d       NaN -1.188434 -0.955574\n",
+      "        one     three       two\n",
+      "a -1.076256       NaN -0.843741\n",
+      "b -0.482088 -0.390963 -0.624951\n",
+      "c -0.829578 -1.003883 -1.051088\n",
+      "d       NaN -2.192317 -2.006662\n"
+     ]
+    }
+   ],
+   "source": [
+    "print df\n",
+    "print df.cumsum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "here is a quick reference sumarry table of common functions. Each also takes an optional level parameter which applies only if the object has hierarchical index\n",
+    "- Function : Description\n",
+    "- count: Number of non-null observations\n",
+    "- sum: sum of values\n",
+    "- mean: mean of values\n",
+    "- mad: mean absolute deviation\n",
+    "- median: artimetic median of values\n",
+    "- min : minimun\n",
+    "- max: maximun\n",
+    "- mode: xmode\n",
+    "- abs: absoulte value\n",
+    "- prod: product of values\n",
+    "- std: Bessel-corrected sample standart defiveaton\n",
+    "- var: unvised variance\n",
+    "- sem: stadard error of the mean\n",
+    "- skew: sample skwe\n",
+    "- kurt: Sample kurtoris\n",
+    "- quantile: smaple quantile\n",
+    "- comsum: cumulative sum\n",
+    "- cumprod: "
+   ]
   }
  ],
  "metadata": {
