--- a/pandas/Essential Basic Functionality.ipynb
+++ b/pandas/Essential Basic Functionality.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -49,25 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0    1.600384\n",
-      "1   -0.407873\n",
-      "2    0.359483\n",
-      "3    0.532786\n",
-      "4    1.210273\n",
-      "dtype: float64\n",
-      "997   -0.544460\n",
-      "998    1.228556\n",
-      "999    1.610510\n",
-      "dtype: float64\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-dab0ba47444e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-dab0ba47444e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print long_series.head()\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -96,31 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   A         B         C\n",
-      "2000-01-01  0.145118  0.630566  0.337466\n",
-      "2000-01-02 -0.006667 -1.635134 -0.154327\n",
-      "['A', 'B', 'C']\n",
-      "                   a         b         c\n",
-      "2000-01-01  0.145118  0.630566  0.337466\n",
-      "2000-01-02 -0.006667 -1.635134 -0.154327\n",
-      "2000-01-03 -1.993847  0.591524 -1.615003\n",
-      "2000-01-04 -0.701164  0.183968  1.112280\n",
-      "2000-01-05 -0.625369  2.013312 -1.447237\n",
-      "2000-01-06  0.624275 -2.083235 -0.161841\n",
-      "2000-01-07 -0.928790  2.062428  3.404676\n",
-      "2000-01-08 -0.142214 -0.921791  0.230453\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df[:2]\n",
     "print [x for x in df.columns]\n",
@@ -137,38 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1.63140465  0.13828657  0.58947383  1.12658133  0.88258443]\n",
-      "[[ 0.14511772  0.63056563  0.33746631]\n",
-      " [-0.00666655 -1.63513443 -0.15432732]\n",
-      " [-1.99384747  0.59152437 -1.61500302]\n",
-      " [-0.70116449  0.18396827  1.1122797 ]\n",
-      " [-0.62536948  2.01331164 -1.44723727]\n",
-      " [ 0.624275   -2.08323481 -0.16184054]\n",
-      " [-0.92878975  2.0624284   3.40467586]\n",
-      " [-0.14221446 -0.92179092  0.23045339]]\n",
-      "[[[  4.53614677e-01   1.19413750e+00   8.83063425e-01   2.01563526e-02]\n",
-      "  [  1.02468534e+00   6.25340607e-01   6.99774812e-01   3.31339568e-01]\n",
-      "  [  7.14750819e-04  -5.09452983e-01   5.29484013e-01   8.46319166e-01]\n",
-      "  [  3.05680585e-01  -4.29092971e-01  -8.93992702e-01   2.27485822e-01]\n",
-      "  [  3.11783753e-01  -4.39327881e-01   5.74645376e-01   2.99857797e-01]]\n",
-      "\n",
-      " [[ -1.27069649e+00  -8.47117176e-01   1.61655553e+00  -2.80847866e-01]\n",
-      "  [ -5.18218421e-01   1.70342023e+00   7.13978108e-01   5.98623046e-01]\n",
-      "  [ -6.04164928e-02  -3.32276393e-01   7.02853576e-01   1.36219867e-01]\n",
-      "  [  1.10780688e+00   9.18750383e-01   1.77985253e+00  -4.12829649e-01]\n",
-      "  [ -1.63698758e+00  -5.17031279e-01  -7.29118597e-01   1.35222058e+00]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print s.values\n",
     "print df.values\n",
@@ -206,52 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        one     three       two\n",
-      "a -1.076256       NaN -0.843741\n",
-      "b  0.594169 -0.390963  0.218790\n",
-      "c -0.347490 -0.612919 -0.426137\n",
-      "d       NaN -1.188434 -0.955574\n",
-      "one      0.594169\n",
-      "three   -0.390963\n",
-      "two      0.218790\n",
-      "Name: b, dtype: float64\n",
-      "a   -0.843741\n",
-      "b    0.218790\n",
-      "c   -0.426137\n",
-      "d   -0.955574\n",
-      "Name: two, dtype: float64\n",
-      "        one     three       two\n",
-      "a -1.670425       NaN -1.062532\n",
-      "b  0.000000  0.000000  0.000000\n",
-      "c -0.941659 -0.221956 -0.644928\n",
-      "d       NaN -0.797470 -1.174364\n",
-      "        one     three       two\n",
-      "a -1.670425       NaN -1.062532\n",
-      "b  0.000000  0.000000  0.000000\n",
-      "c -0.941659 -0.221956 -0.644928\n",
-      "d       NaN -0.797470 -1.174364\n",
-      "        one     three  two\n",
-      "a -0.232515       NaN  0.0\n",
-      "b  0.375378 -0.609754  0.0\n",
-      "c  0.078647 -0.186782  0.0\n",
-      "d       NaN -0.232860  0.0\n",
-      "        one     three  two\n",
-      "a -0.232515       NaN  0.0\n",
-      "b  0.375378 -0.609754  0.0\n",
-      "c  0.078647 -0.186782  0.0\n",
-      "d       NaN -0.232860  0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame({\n",
     "        'one': pd.Series(np.random.randn(3), index=['a', 'b', 'c']),\n",
@@ -280,28 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        one     three  two\n",
-      "a -0.232515       NaN  0.0\n",
-      "b  0.375378 -0.609754  0.0\n",
-      "c  0.078647 -0.186782  0.0\n",
-      "d       NaN -0.232860  0.0\n",
-      "        one     three       two\n",
-      "a -1.076256       NaN -0.843741\n",
-      "b  0.594169 -0.390963  0.218790\n",
-      "c -0.347490 -0.612919 -0.426137\n",
-      "d       NaN -1.188434 -0.955574\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfmi = df.copy()\n",
     "dfmi.indes = pd.MultiIndex.from_tuples([(1, 'a'), (1, 'b'), (1, 'c'),(2, 'a')], names=['first','second'])\n",
@@ -321,38 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        one     three       two\n",
-      "a -1.076256       NaN -0.843741\n",
-      "b  0.594169 -0.390963  0.218790\n",
-      "c -0.347490 -0.612919 -0.426137\n",
-      "d       NaN -1.188434 -0.955574\n",
-      "        one      three       two\n",
-      "a -1.076256  12.000000 -0.843741\n",
-      "b  0.594169  -0.390963  0.218790\n",
-      "c -0.347490  -0.612919 -0.426137\n",
-      "d       NaN  -1.188434 -0.955574\n",
-      "        one     three       two\n",
-      "a -2.152513       NaN -1.687483\n",
-      "b  1.188337 -0.781927  0.437581\n",
-      "c -0.694980 -1.225839 -0.852275\n",
-      "d       NaN -2.376868 -1.911147\n",
-      "        one      three       two\n",
-      "a -2.152513  12.000000 -1.687483\n",
-      "b  1.188337  -0.781927  0.437581\n",
-      "c -0.694980  -1.225839 -0.852275\n",
-      "d       NaN  -2.376868 -1.911147\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df\n",
     "df2 = df.copy()\n",
@@ -375,28 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     one  three    two\n",
-      "a  False  False  False\n",
-      "b  False  False  False\n",
-      "c  False  False  False\n",
-      "d  False  False  False\n",
-      "     one  three    two\n",
-      "a  False   True  False\n",
-      "b  False  False  False\n",
-      "c  False  False  False\n",
-      "d   True  False  False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df.gt(df2)\n",
     "print df.ne(df2)"
@@ -413,36 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     one  three    two\n",
-      "a  False  False  False\n",
-      "b   True  False   True\n",
-      "c  False  False  False\n",
-      "d  False  False  False\n",
-      "one      False\n",
-      "three    False\n",
-      "two      False\n",
-      "dtype: bool\n",
-      "a    False\n",
-      "b    False\n",
-      "c    False\n",
-      "d    False\n",
-      "dtype: bool\n",
-      "one       True\n",
-      "three    False\n",
-      "two       True\n",
-      "dtype: bool\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df > 0\n",
     "print (df > 0).all()\n",
@@ -469,32 +287,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        one     three       two\n",
-      "a -1.076256       NaN -0.843741\n",
-      "b  0.594169 -0.390963  0.218790\n",
-      "c -0.347490 -0.612919 -0.426137\n",
-      "d       NaN -1.188434 -0.955574\n",
-      "one     -0.276526\n",
-      "three   -0.730772\n",
-      "two     -0.501665\n",
-      "dtype: float64\n",
-      "a   -0.959999\n",
-      "b    0.140665\n",
-      "c   -0.462182\n",
-      "d   -1.072004\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df\n",
     "print df.mean()\n",
@@ -510,27 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "one           NaN\n",
-      "three         NaN\n",
-      "two     -2.006662\n",
-      "dtype: float64\n",
-      "a   -1.919998\n",
-      "b    0.421996\n",
-      "c   -1.386547\n",
-      "d   -2.144007\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df.sum(0, skipna=False)\n",
     "print df.sum(1, skipna=True)"
@@ -545,32 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        one     three       two\n",
-      "a -0.954936       NaN -0.643478\n",
-      "b  1.039672  0.825599  1.355248\n",
-      "c -0.084736  0.286335  0.142076\n",
-      "d       NaN -1.111934 -0.853846\n",
-      "one      1.0\n",
-      "three    1.0\n",
-      "two      1.0\n",
-      "dtype: float64\n",
-      "a    1.0\n",
-      "b    1.0\n",
-      "c    1.0\n",
-      "d    1.0\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ts_stand = (df - df.mean())/ df.std()\n",
     "print ts_stand\n",
@@ -589,28 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        one     three       two\n",
-      "a -1.076256       NaN -0.843741\n",
-      "b  0.594169 -0.390963  0.218790\n",
-      "c -0.347490 -0.612919 -0.426137\n",
-      "d       NaN -1.188434 -0.955574\n",
-      "        one     three       two\n",
-      "a -1.076256       NaN -0.843741\n",
-      "b -0.482088 -0.390963 -0.624951\n",
-      "c -0.829578 -1.003883 -1.051088\n",
-      "d       NaN -2.192317 -2.006662\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print df\n",
     "print df.cumsum()"
@@ -644,22 +387,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [py35]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [py35]"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
